--- a/aoc23/day5/Cargo.toml
+++ b/aoc23/day5/Cargo.toml
@@ -1,17 +1,9 @@
 [package]
-name = "aoc23"
+name = "day5"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-[workspace]
-members = [
-    "day1",
-    "day2",
-    "day3",
-    "day4",
-    "day5",
-]
+time = "0.3.30"
